# GoIt_Web_HW_10_2

./: .gitignore  pyproject.toml  requirements.txt
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html  tags.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/: login.html  logout.html  register.html
hw_project/users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  password_reset_coplete.html  password_reset_done.html  password_reset_email.html  register.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py  quotes.json
